--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,5 @@ jobs:
         run: pip install -r requirements.txt
       - name: Run tests
         run: python manage.py test
+      - name : Git bisect
+        run : myscript.py
